--- a/doc/latex/group__auxiliary_functions.tex
+++ b/doc/latex/group__auxiliary_functions.tex
@@ -3,10 +3,8 @@
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
-declare i \mbox{\hyperlink{utils_8sh_a1eff9a1c5942c362f2838b7d69848255}{ARRAY\+\_\+\+LENGTH}} \mbox{\hyperlink{group__auxiliary_functions_gaca1ddf007bdcce3b29c42e0c5dc41717}{create\+\_\+options\+\_\+array}} ()
+declare \mbox{\hyperlink{mkgentoo_8sh_a3d227b4f2eb105a85a4e07d5f92094cf}{i}} \mbox{\hyperlink{utils_8sh_a1eff9a1c5942c362f2838b7d69848255}{ARRAY\+\_\+\+LENGTH}} \mbox{\hyperlink{group__auxiliary_functions_gaca1ddf007bdcce3b29c42e0c5dc41717}{create\+\_\+options\+\_\+array}} ()
 \begin{DoxyCompactList}\small\item\em Read file {\bfseries{options}} into a temporary array A which will contain command line specifications. \end{DoxyCompactList}\item 
-\mbox{\hyperlink{group__auxiliary_functions_ga913689f9801eab383c4187327367e870}{check\+\_\+md5sum}} (filename)
-\begin{DoxyCompactList}\small\item\em Check md5sums in file MD5\+SUMS. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__auxiliary_functions_ga70900c9c46939d6381db66e4216b33b4}{test\+\_\+numeric}} (number)
 \begin{DoxyCompactList}\small\item\em Test whether the input value is numeric. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__auxiliary_functions_gad3c2bc1a09d31ccc6f3130b9329b4690}{test\+\_\+\+URL}} (Internet)
@@ -56,7 +54,7 @@ Bind-\/mounts the host live filesystem (proc/sys/dev/run) to a future chrooted O
 \end{DoxyParams}
 
 
-Definition at line 520 of file utils.\+sh.
+Definition at line 503 of file utils.\+sh.
 
 \mbox{\Hypertarget{group__auxiliary_functions_ga37ccab4be14da0e5c11e2e176e48f36a}\label{group__auxiliary_functions_ga37ccab4be14da0e5c11e2e176e48f36a}} 
 \index{Auxiliary functions to check@{Auxiliary functions to check}!burn\_iso@{burn\_iso}}
@@ -78,7 +76,7 @@ Burn Gentoo clonezilla installer to DVD using {\bfseries{cdrecord}}.
 \end{DoxyRetVals}
 
 
-Definition at line 310 of file utils.\+sh.
+Definition at line 294 of file utils.\+sh.
 
 \mbox{\Hypertarget{group__auxiliary_functions_ga6778bbe343952d56347e2eb540e65bec}\label{group__auxiliary_functions_ga6778bbe343952d56347e2eb540e65bec}} 
 \index{Auxiliary functions to check@{Auxiliary functions to check}!check\_dir@{check\_dir}}
@@ -105,7 +103,7 @@ Paths should be separated by spaces and quoted.
 \end{DoxyRetVals}
 
 
-Definition at line 388 of file utils.\+sh.
+Definition at line 372 of file utils.\+sh.
 
 \mbox{\Hypertarget{group__auxiliary_functions_gaf79cae8ae0bba296925e9cb0e14e466b}\label{group__auxiliary_functions_gaf79cae8ae0bba296925e9cb0e14e466b}} 
 \index{Auxiliary functions to check@{Auxiliary functions to check}!check\_file@{check\_file}}
@@ -134,7 +132,7 @@ Paths should be separated by spaces and quoted.
 \end{DoxyRetVals}
 
 
-Definition at line 409 of file utils.\+sh.
+Definition at line 393 of file utils.\+sh.
 
 \mbox{\Hypertarget{group__auxiliary_functions_gaac542e607b5e918f64c42081f88c228f}\label{group__auxiliary_functions_gaac542e607b5e918f64c42081f88c228f}} 
 \index{Auxiliary functions to check@{Auxiliary functions to check}!check\_files@{check\_files}}
@@ -161,31 +159,7 @@ Paths should be separated by spaces and quoted.
 \end{DoxyRetVals}
 
 
-Definition at line 429 of file utils.\+sh.
-
-\mbox{\Hypertarget{group__auxiliary_functions_ga913689f9801eab383c4187327367e870}\label{group__auxiliary_functions_ga913689f9801eab383c4187327367e870}} 
-\index{Auxiliary functions to check@{Auxiliary functions to check}!check\_md5sum@{check\_md5sum}}
-\index{check\_md5sum@{check\_md5sum}!Auxiliary functions to check@{Auxiliary functions to check}}
-\doxysubsubsection{\texorpdfstring{check\_md5sum()}{check\_md5sum()}}
-{\footnotesize\ttfamily check\+\_\+md5sum (\begin{DoxyParamCaption}\item[{filename}]{ }\end{DoxyParamCaption})}
-
-
-
-Check md5sums in file MD5\+SUMS. 
-
-
-\begin{DoxyParams}{Parameters}
-{\em filename} & Local name of file to be checked for md5sum. \\
-\hline
-\end{DoxyParams}
-
-\begin{DoxyRetVals}{Return values}
-{\em Return} & 0 on success otherwise -\/1 on exit \\
-\hline
-\end{DoxyRetVals}
-
-
-Definition at line 93 of file utils.\+sh.
+Definition at line 413 of file utils.\+sh.
 
 \mbox{\Hypertarget{group__auxiliary_functions_ga00a42c03a3293fb36712737e7b558d11}\label{group__auxiliary_functions_ga00a42c03a3293fb36712737e7b558d11}} 
 \index{Auxiliary functions to check@{Auxiliary functions to check}!check\_tool@{check\_tool}}
@@ -212,7 +186,7 @@ Paths should be separated by spaces and quoted.
 \end{DoxyRetVals}
 
 
-Definition at line 449 of file utils.\+sh.
+Definition at line 432 of file utils.\+sh.
 
 \mbox{\Hypertarget{group__auxiliary_functions_gaff07c1d29d6d6a540c726948254a1764}\label{group__auxiliary_functions_gaff07c1d29d6d6a540c726948254a1764}} 
 \index{Auxiliary functions to check@{Auxiliary functions to check}!cleanup@{cleanup}}
@@ -236,7 +210,7 @@ Needs
 \end{DoxyCode}
  then erase ISO files with names containing {\bfseries{clonezilla}}, {\bfseries{install}} or {\bfseries{downloaded}} names. 
 
-Definition at line 491 of file utils.\+sh.
+Definition at line 474 of file utils.\+sh.
 
 \mbox{\Hypertarget{group__auxiliary_functions_gaa521664c8068dda803d73ecb07b9d04e}\label{group__auxiliary_functions_gaa521664c8068dda803d73ecb07b9d04e}} 
 \index{Auxiliary functions to check@{Auxiliary functions to check}!create\_install\_ext\_device@{create\_install\_ext\_device}}
@@ -258,7 +232,7 @@ Use with care, check your EXT\+\_\+\+DEVICE variable.
 \end{DoxyRetVals}
 
 
-Definition at line 360 of file utils.\+sh.
+Definition at line 344 of file utils.\+sh.
 
 \mbox{\Hypertarget{group__auxiliary_functions_gaca1ddf007bdcce3b29c42e0c5dc41717}\label{group__auxiliary_functions_gaca1ddf007bdcce3b29c42e0c5dc41717}} 
 \index{Auxiliary functions to check@{Auxiliary functions to check}!create\_options\_array@{create\_options\_array}}
@@ -301,7 +275,7 @@ Command success is presumed to be identified by \$? == 0.
 \end{DoxyRetVals}
 
 
-Definition at line 470 of file utils.\+sh.
+Definition at line 453 of file utils.\+sh.
 
 \mbox{\Hypertarget{group__auxiliary_functions_ga38ca6200b4d28d4ea8fcadb531533519}\label{group__auxiliary_functions_ga38ca6200b4d28d4ea8fcadb531533519}} 
 \index{Auxiliary functions to check@{Auxiliary functions to check}!recreate\_liveCD\_ISO@{recreate\_liveCD\_ISO}}
@@ -326,7 +300,7 @@ An alternative xorriso solution could be considered
 \end{DoxyNote}
 
 
-Definition at line 271 of file utils.\+sh.
+Definition at line 255 of file utils.\+sh.
 
 \mbox{\Hypertarget{group__auxiliary_functions_ga132042cf80f0610ddde0fdb6fc234a45}\label{group__auxiliary_functions_ga132042cf80f0610ddde0fdb6fc234a45}} 
 \index{Auxiliary functions to check@{Auxiliary functions to check}!send\_mail@{send\_mail}}
@@ -346,7 +320,7 @@ Return value of `curl' command.
 \end{DoxyReturn}
 
 
-Definition at line 133 of file utils.\+sh.
+Definition at line 117 of file utils.\+sh.
 
 \mbox{\Hypertarget{group__auxiliary_functions_ga70900c9c46939d6381db66e4216b33b4}\label{group__auxiliary_functions_ga70900c9c46939d6381db66e4216b33b4}} 
 \index{Auxiliary functions to check@{Auxiliary functions to check}!test\_numeric@{test\_numeric}}
@@ -368,7 +342,7 @@ grep value against input string
 \end{DoxyReturn}
 
 
-Definition at line 109 of file utils.\+sh.
+Definition at line 93 of file utils.\+sh.
 
 \mbox{\Hypertarget{group__auxiliary_functions_gad3c2bc1a09d31ccc6f3130b9329b4690}\label{group__auxiliary_functions_gad3c2bc1a09d31ccc6f3130b9329b4690}} 
 \index{Auxiliary functions to check@{Auxiliary functions to check}!test\_URL@{test\_URL}}
@@ -390,5 +364,5 @@ grep value against input string
 \end{DoxyReturn}
 
 
-Definition at line 119 of file utils.\+sh.
+Definition at line 103 of file utils.\+sh.
 
