--- a/doc/latex/utils_8sh.tex
+++ b/doc/latex/utils_8sh.tex
@@ -8,10 +8,8 @@ Auxiliary functions.
 \doxysubsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
-declare i \mbox{\hyperlink{utils_8sh_a1eff9a1c5942c362f2838b7d69848255}{ARRAY\+\_\+\+LENGTH}} \mbox{\hyperlink{group__auxiliary_functions_gaca1ddf007bdcce3b29c42e0c5dc41717}{create\+\_\+options\+\_\+array}} ()
+declare \mbox{\hyperlink{mkgentoo_8sh_a3d227b4f2eb105a85a4e07d5f92094cf}{i}} \mbox{\hyperlink{utils_8sh_a1eff9a1c5942c362f2838b7d69848255}{ARRAY\+\_\+\+LENGTH}} \mbox{\hyperlink{group__auxiliary_functions_gaca1ddf007bdcce3b29c42e0c5dc41717}{create\+\_\+options\+\_\+array}} ()
 \begin{DoxyCompactList}\small\item\em Read file {\bfseries{options}} into a temporary array A which will contain command line specifications. \end{DoxyCompactList}\item 
-\mbox{\hyperlink{group__auxiliary_functions_ga913689f9801eab383c4187327367e870}{check\+\_\+md5sum}} (filename)
-\begin{DoxyCompactList}\small\item\em Check md5sums in file MD5\+SUMS. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__auxiliary_functions_ga70900c9c46939d6381db66e4216b33b4}{test\+\_\+numeric}} (number)
 \begin{DoxyCompactList}\small\item\em Test whether the input value is numeric. \end{DoxyCompactList}\item 
 \mbox{\hyperlink{group__auxiliary_functions_gad3c2bc1a09d31ccc6f3130b9329b4690}{test\+\_\+\+URL}} (Internet)
@@ -72,7 +70,7 @@ This file is not included into the clonezilla ISO live\+CD.
 
 
 
-Definition at line 253 of file utils.\+sh.
+Definition at line 237 of file utils.\+sh.
 
 
 
