--- a/doc/man/man3/createInstaller.3
+++ b/doc/man/man3/createInstaller.3
@@ -1,4 +1,4 @@
-.TH "createInstaller" 3 "Tue Mar 23 2021" "Version 1.0" "mkg" \" -*- nroff -*-
+.TH "createInstaller" 3 "Sat May 8 2021" "Version 1.0" "mkg" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -53,6 +53,10 @@ createInstaller \- Create Gentoo linux image and installer\&.
 .RI "\fBtest_cli_post\fP ()"
 .br
 .RI "Check commanline coherence and incompatibilities\&. "
+.ti -1c
+.RI "\fBrun_docker_container\fP ()"
+.br
+.RI "Run the downloaded Docker image\&. "
 .ti -1c
 .RI "\fBmount_live_cd\fP ()"
 .br
@@ -164,13 +168,13 @@ Installing the guest additions is a prerequisite to folder sharing between the I
 .PP
 
 .PP
-Definition at line 2095 of file mkgentoo\&.sh\&.
+Definition at line 2276 of file mkgentoo\&.sh\&.
 .SS "bind_mount_clonezilla_iso ()"
 
 .PP
 Fetches the clonezilla ISO\&. mount it to mnt, rsync it to mnt2 and ISOFILES bind-mount mnt2 live filesystem after unsquashfs\&. 
 .PP
-Definition at line 2166 of file mkgentoo\&.sh\&.
+Definition at line 2347 of file mkgentoo\&.sh\&.
 .SS "build_virtualbox ()"
 
 .PP
@@ -189,7 +193,7 @@ Directly clone Gentoo VM to USB stick (or any using block device)
 .PP
 
 .PP
-Definition at line 1963 of file mkgentoo\&.sh\&.
+Definition at line 2143 of file mkgentoo\&.sh\&.
 .SS "clonezilla_device_to_image ()"
 
 .PP
@@ -202,7 +206,7 @@ Create CloneZilla xz-compressed image out of an external block device (like a US
 .PP
 
 .PP
-Definition at line 2237 of file mkgentoo\&.sh\&.
+Definition at line 2418 of file mkgentoo\&.sh\&.
 .SS "clonezilla_to_iso (iso, dir)"
 
 .PP
@@ -222,7 +226,7 @@ ISO can be burned to DVD or used to create a bootable USB stick using dd on *nix
 .PP
 
 .PP
-Definition at line 2045 of file mkgentoo\&.sh\&.
+Definition at line 2226 of file mkgentoo\&.sh\&.
 .SS "create_device_system (Mode)"
 
 .PP
@@ -245,7 +249,7 @@ Requires \fBhot_install\fP on command line to be activated as a security confirm
 .PP
 
 .PP
-Definition at line 2015 of file mkgentoo\&.sh\&.
+Definition at line 2196 of file mkgentoo\&.sh\&.
 .SS "create_iso_vm ()"
 
 .PP
@@ -269,7 +273,7 @@ the \fBsharedfolder\fP command may fail vith older version of VirtualBox or not 
 .PP
 
 .PP
-Definition at line 1631 of file mkgentoo\&.sh\&.
+Definition at line 1806 of file mkgentoo\&.sh\&.
 .SS "create_vm (VM)"
 
 .PP
@@ -321,13 +325,13 @@ Find a way to only compact on success and never on failure of VM\&.
 .PP
 
 .PP
-Definition at line 1360 of file mkgentoo\&.sh\&.
+Definition at line 1536 of file mkgentoo\&.sh\&.
 .SS "deep_clean ()"
 
 .PP
 Force-clean root VirtualBox registry\&. 
 .PP
-Definition at line 1190 of file mkgentoo\&.sh\&.
+Definition at line 1366 of file mkgentoo\&.sh\&.
 .SS "delete_vm (vm, ext, mode)"
 
 .PP
@@ -357,25 +361,25 @@ Deletes its folder structure and hard drive (default is 'vdi' as a second argume
 .PP
 
 .PP
-Definition at line 1247 of file mkgentoo\&.sh\&.
+Definition at line 1423 of file mkgentoo\&.sh\&.
 .SS "generate_Gentoo ()"
 
 .PP
 Launch routines: fetch install IO, starge3 archive, create VM\&. 
 .PP
-Definition at line 2373 of file mkgentoo\&.sh\&.
+Definition at line 2603 of file mkgentoo\&.sh\&.
 .SS "get_options ()"
 
 .PP
 Parse command line\&. 
 .PP
-Definition at line 281 of file mkgentoo\&.sh\&.
+Definition at line 302 of file mkgentoo\&.sh\&.
 .SS "help_ ()"
 
 .PP
 Print usage to stdout\&. 
 .PP
-Definition at line 226 of file mkgentoo\&.sh\&.
+Definition at line 247 of file mkgentoo\&.sh\&.
 .SS "help_md ()"
 
 .PP
@@ -394,13 +398,13 @@ Definition at line 124 of file mkgentoo\&.sh\&.
 .PP
 Print help to html page\&. 
 .PP
-Definition at line 243 of file mkgentoo\&.sh\&.
+Definition at line 264 of file mkgentoo\&.sh\&.
 .SS "log_loop ()"
 
 .PP
 Loop log tags every minute and optionally plot virtual disk size\&. Customizable suing options: plot_color, plot_period, plot_position, plot_pause, plot_span 
 .PP
-Definition at line 1555 of file mkgentoo\&.sh\&.
+Definition at line 1730 of file mkgentoo\&.sh\&.
 .SS "main ()"
 
 .PP
@@ -413,7 +417,7 @@ Daemonize the part below generate_Gentoo when #VMTYPE is \fCheadless\fP so that 
 .PP
 
 .PP
-Definition at line 2423 of file mkgentoo\&.sh\&.
+Definition at line 2691 of file mkgentoo\&.sh\&.
 .SS "make_boot_from_livecd ()"
 
 .PP
@@ -438,13 +442,13 @@ Will be run in the ${VM} virtual machine
 .PP
 
 .PP
-Definition at line 1073 of file mkgentoo\&.sh\&.
+Definition at line 1249 of file mkgentoo\&.sh\&.
 .SS "manpage ()"
 
 .PP
 Print help to man page\&. 
 .PP
-Definition at line 234 of file mkgentoo\&.sh\&.
+Definition at line 255 of file mkgentoo\&.sh\&.
 .SS "mount_live_cd ()"
 
 .PP
@@ -457,13 +461,13 @@ live CD is mounted under $VMPATH/mnt and rsync'd to $VMPATH/mnt2
 .PP
 
 .PP
-Definition at line 758 of file mkgentoo\&.sh\&.
+Definition at line 921 of file mkgentoo\&.sh\&.
 .SS "pdfpage ()"
 
 .PP
 Print help to pdf page\&. 
 .PP
-Definition at line 252 of file mkgentoo\&.sh\&.
+Definition at line 273 of file mkgentoo\&.sh\&.
 .SS "prepare_for_iso_vm ()"
 Short version of \fBadd_guest_additions_to_clonezilla_iso\fP when the ISO has already been pre-authored\&. 
 .PP
@@ -474,7 +478,38 @@ Installing the guest additions is a prerequisite to folder sharing between the I
 .PP
 
 .PP
-Definition at line 2332 of file mkgentoo\&.sh\&.
+Definition at line 2521 of file mkgentoo\&.sh\&.
+.SS "run_docker_container ()"
+
+.PP
+Run the downloaded Docker image\&. 
+.PD 0
+
+.IP "\(bu" 2
+Run the MKG command line within the container\&. 
+.PP
+\fBWarning\fP
+.RS 4
+Needs administrative rights to load the image\&. 
+.RE
+.PP
+\fBReturn values\fP
+.RS 4
+\fIThe\fP Docker ID of the container started by
+.PP
+.nf
+docker run 
+
+.fi
+.PP
+ 
+.RE
+.PP
+
+.PP
+
+.PP
+Definition at line 845 of file mkgentoo\&.sh\&.
 .SS "test_cli (cli)"
 
 .PP
@@ -495,7 +530,7 @@ Also checks type of argument against types described for \fBARR\fP
 .PP
 
 .PP
-Definition at line 436 of file mkgentoo\&.sh\&.
+Definition at line 467 of file mkgentoo\&.sh\&.
 .SS "test_cli_post ()"
 
 .PP
@@ -508,7 +543,7 @@ Check commanline coherence and incompatibilities\&.
 .PP
 
 .PP
-Definition at line 590 of file mkgentoo\&.sh\&.
+Definition at line 621 of file mkgentoo\&.sh\&.
 .SS "test_cli_pre ()"
 
 .PP
@@ -521,7 +556,7 @@ Check VirtualBox version and prepare commandline analysis\&.
 .PP
 
 .PP
-Definition at line 353 of file mkgentoo\&.sh\&.
+Definition at line 374 of file mkgentoo\&.sh\&.
 .SS "test_vm_running (vm)"
 
 .PP
@@ -539,13 +574,13 @@ Check if VM as first named argument exists and is running\&.
 .PP
 
 .PP
-Definition at line 1180 of file mkgentoo\&.sh\&.
+Definition at line 1356 of file mkgentoo\&.sh\&.
 .SS "unmount_clonezilla_iso ()"
 
 .PP
 Unmount the clonezilla filesystem after exiting chroot\&. Restore the squashfs filesystem\&. 
 .PP
-Definition at line 2215 of file mkgentoo\&.sh\&.
+Definition at line 2396 of file mkgentoo\&.sh\&.
 .SS "validate_option (option)"
 
 .PP
@@ -563,7 +598,7 @@ true if legitimate option otherwise false\&.
 .PP
 
 .PP
-Definition at line 268 of file mkgentoo\&.sh\&.
+Definition at line 289 of file mkgentoo\&.sh\&.
 .SH "Variable Documentation"
 .PP 
 .SS "ARR"
