--- a/doc/man/man3/mkgentoo.sh.3
+++ b/doc/man/man3/mkgentoo.sh.3
@@ -1,4 +1,4 @@
-.TH "mkgentoo.sh" 3 "Tue Mar 23 2021" "Version 1.0" "mkg" \" -*- nroff -*-
+.TH "mkgentoo.sh" 3 "Sat May 8 2021" "Version 1.0" "mkg" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -50,6 +50,10 @@ mkgentoo.sh \- Process options, create Gentoo VirtualBox machine and optionally 
 .RI "\fBtest_cli_post\fP ()"
 .br
 .RI "Check commanline coherence and incompatibilities\&. "
+.ti -1c
+.RI "\fBrun_docker_container\fP ()"
+.br
+.RI "Run the downloaded Docker image\&. "
 .ti -1c
 .RI "\fBmount_live_cd\fP ()"
 .br
@@ -150,6 +154,9 @@ Upgrade it with virtualbox guest additions\&. "
 .br
 .RI "Custom name of ISO output\&. Default value is false Can be reversed by a name of type filename\&.iso on command line, previously created and reused to burn or dd to device installer\&. "
 .ti -1c
+.RI "Integer \fBi\fP"
+.br
+.ti -1c
 .RI "Exported String \fBLOG\fP"
 .br
 .ti -1c
@@ -158,6 +165,9 @@ Upgrade it with virtualbox guest additions\&. "
 .RI "---- PATCH ---- "
 .ti -1c
 .RI "Exported String \fBPATH\fP = '${PATH}':'${VBPATH}'"
+.br
+.ti -1c
+.RI "Exported String \fBCLI_PULL\fP = $(sed \-r 's/(\&.*)pull=true(\&.*)/\\1\\2/g' <<< '$@')"
 .br
 .ti -1c
 .RI "Exported String \fBSHARE_ROOT\fP"
@@ -237,7 +247,7 @@ you should have at least 55 GB of free disk space in the current directory or in
 Only create the VM and virtual disk, in debug mode, without R and set new passwords, for a French-language platform\&. Use 8 cores\&. 
 .PP
 .nf
- mkg vm_language=fr minimal debug_mode ncpus=8
+ mkg vm_language=fr_FR minimal debug_mode ncpus=8
 nonroot_user=ken passwd='util!Hx&32F' rootpasswd='Hk_32!_CD' cleanup=false
 
 .fi
@@ -288,15 +298,15 @@ Guestfish and qemu websites for security issues\&.
 .PP
 
 .PP
-Definition at line 1774 of file mkgentoo\&.sh\&.
+Definition at line 1949 of file mkgentoo\&.sh\&.
 .SS "move_auxiliary_files ()"
 
 .PP
-Definition at line 1012 of file mkgentoo\&.sh\&.
+Definition at line 1188 of file mkgentoo\&.sh\&.
 .SS "prepare_bash_rc ()"
 Prepare the \&.bashrc file by exporting the environment this will be placed under /root in the VM 
 .PP
-Definition at line 1147 of file mkgentoo\&.sh\&.
+Definition at line 1323 of file mkgentoo\&.sh\&.
 .SS "unmount_vdi (mountpoint)"
 
 .PP
@@ -319,31 +329,39 @@ Guestfish and qemu websites for security issues\&.
 .PP
 
 .PP
-Definition at line 1875 of file mkgentoo\&.sh\&.
+Definition at line 2054 of file mkgentoo\&.sh\&.
 .SH "Variable Documentation"
 .PP 
+.SS "Exported String CLI_PULL = $(sed \-r 's/(\&.*)pull=true(\&.*)/\\1\\2/g' <<< '$@')"
+
+.PP
+Definition at line 2708 of file mkgentoo\&.sh\&.
+.SS "Integer i"
+
+.PP
+Definition at line 223 of file mkgentoo\&.sh\&.
 .SS "Exported String ISOLINUX_DIR = isolinux"
 
 .PP
 ---- PATCH ---- ---- End of patch ---- 
 .PP
-Definition at line 951 of file mkgentoo\&.sh\&.
+Definition at line 1117 of file mkgentoo\&.sh\&.
 .SS "Exported String LOG"
 
 .PP
-Definition at line 288 of file mkgentoo\&.sh\&.
+Definition at line 309 of file mkgentoo\&.sh\&.
 .SS "Exported String PATH = '${PATH}':'${VBPATH}'"
 
 .PP
-Definition at line 1362 of file mkgentoo\&.sh\&.
+Definition at line 1538 of file mkgentoo\&.sh\&.
 .SS "Exported String SHARE_ROOT"
 
 .PP
-Definition at line 2501 of file mkgentoo\&.sh\&.
+Definition at line 2806 of file mkgentoo\&.sh\&.
 .SS "Exported String SHARED_DIR"
 
 .PP
-Definition at line 2502 of file mkgentoo\&.sh\&.
+Definition at line 2807 of file mkgentoo\&.sh\&.
 .SH "Author"
 .PP 
 Generated automatically by Doxygen for mkg from the source code\&.
